# lazily-spec

./: .gitignore  AGENTS.md  Makefile  README.md  book.toml  cell-model.md  coverage.json  protocol.md  pyproject.toml
.github/workflows/: ci.yml  mdbook.yml
conformance/: arena_blob.json  delta_non_sequential.json  delta_sequential.json  delta_shared_blob.json  delta_zero_copy_arrow.json  snapshot_minimal.json  snapshot_multi_node.json  snapshot_shared_blob.json
conformance/agent-doc/: delta_agent_doc_state.json  snapshot_agent_doc_state.json
conformance/collections/: cellmap_atomic_move.json  cellmap_independence.json  (+18 more)
docs/: SUMMARY.md  async.md  cell-model.md  conformance.md  coordination.md  coverage.md  crdt-tree.md  distributed-queue-prd.md  durable-outbox.md  durable-sinks.md  formal-model.md  introduction.md  lossless-tree-crdt.md  membership.md  message-passing.md  presence.md  protocol.md  rate-shaping.md  reactive-graph.md  receipts.md  relaycell-backpressure-analysis.md  relaycell.md  resilience.md  schemas.md  service.md  state-charts.md  state-machine.md  temporal-sources.md  version-based-invalidation-plan.md  windowing.md  zero-copy-transport.md
examples/: delta.json  signaling-session.json  snapshot.json
schemas/: agent-doc-state.json  defs.json  delta.json  distributed.json  ffi.json  lossless-tree-delta.json  lossless-tree.json  message-passing.json  receipts.json  reliable-sync.json  signaling.json  snapshot.json  statechart.json
scripts/: gen_message_passing_fixtures.py  sync-coverage.mjs
tests/: test_schema_conformance.py
(+99 files in other folders)
